  * debian/control: Slightly bump the C/R: for -common; it's a pointless delta
    to Ubuntu and it doesn't hurt us.
  * debian/cupsys-bsd.postinst: Symlink cupsys-bsd's doc directory to
    cupsys-common's, not cupsys', since the latter is not a dependency.
  * debian/control: Demote cups-pdf from Recommends: to Suggests: to match the
    semantics (apt installs recommends by default now).

  [ Till Kamppeter ]
  * Add debian/local/backends/dnssd: Printer discovery backend for
    several cheaper printers, like the HP Color LaserJet 2600n, are not
    discovered by the "snmp" backend.  In addition, this backend extracts more
    info from the printers than the "snmp" backend, like for example available
    page description languages.  This leads to better driver choices for
    unknown printer models.
  * debian/cupsys.install, debian/cupsys.{prerm,postinst,templates,rules}:
    Install new backend.
  * debian/control: Add Recommends: to avahi-utils; if it is installed, the
    dnssd backend can actually work.
  * debian/postinst: Activate new backends (since Etch) by default on
    upgrades. This affects snmp, scsi, serial, and dnssd.

 -- Kenshi Muto <kmuto@debian.org>  Fri, 30 Nov 2007 18:28:49 +0100

cupsys (1.3.4-1) unstable; urgency=high

  * New upstream release.
    - Fixes CVE-2007-4351
      IPP Tags Memory Corruption Vulnerability (closes: #448866)

  [ Martin Pitt ]
  * debian/cupsys.postinst: Drop ancient code to remove root from group
    lpadmin.

  [ Kenshi Muto ]
  * Debconf translation
    - Finnish (closes: #446740)

 -- Kenshi Muto <kmuto@debian.org>  Fri, 02 Nov 2007 21:32:29 +0900

cupsys (1.3.2-1) unstable; urgency=low

  * New upstream bug fix release.
    - Fixes web interface for many browsers. (STR#2472, Closes: #440589)
  * Remove str2488-fix-localedir.dpatch, str2505_localize.dpatch,
    str2508-dont_kill_edit-config.tmpl.dpatch: Fixed upstream.

 -- Martin Pitt <mpitt@debian.org>  Tue, 18 Sep 2007 08:15:17 +0200
