@@ -12,6 +12,8 @@ cupsys (1.3.4-2) UNRELEASED; urgency=low
     cupsys-common's, not cupsys', since the latter is not a dependency.
   * debian/control: Demote cups-pdf from Recommends: to Suggests: to match the
     semantics (apt installs recommends by default now).
+  * debian/cupsys.init.d: Add LSB header, thanks to Petter Reinholdtsen!
+    (closes: #337640)
 
   [ Till Kamppeter ]
   * Add debian/local/backends/dnssd: Printer discovery backend for
@@ -27,7 +29,7 @@ cupsys (1.3.4-2) UNRELEASED; urgency=low
   * debian/postinst: Activate new backends (since Etch) by default on
     upgrades. This affects snmp, scsi, serial, and dnssd.
 
- -- Kenshi Muto <kmuto@debian.org>  Fri, 30 Nov 2007 18:28:49 +0100
+ -- Kenshi Muto <kmuto@debian.org>  Fri, 30 Nov 2007 18:34:11 +0100
 
 cupsys (1.3.4-1) unstable; urgency=high
 
